# pii-anonymizer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  performance_KARPINSKI.txt  preprocessing_KARPINSKI.md  presentation_KARPINSKI.md  pyproject.toml  requirements.txt  synthetic_generation_KARPINSKI.md
app/: __init__.py  main.py
app/api/: routes.py  schemas.py
app/core/: config.py  logging.py
app/engine/: gliner_model.py  hybrid_runner.py  regex_matcher.py  synthesizer.py
data/: extract_lemmas.py  output_masked.txt  polimorf_importer.py  train_generator.py  train_model.py  train_small.jsonl
tests/: test_api.py
