[project]
name = "gliner-nask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "fastapi>=0.124.0",
    "gliner>=0.2.24",
    "httpx>=0.28.1",
    "pip>=25.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-multipart>=0.0.20",
    "regex>=2025.11.3",
    "spacy>=3.8.11",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "typing-extensions>=4.15.0",
    "uvicorn[standard]>=0.38.0",
]
